--- a/styles/Home.html
+++ b/styles/Home.html
@@ -18,7 +18,7 @@
   			<li><a href="keahlian.html">Keahlian</a></li>
   			<li><a href="Portofolio.html">Portofolio</a></li>
   			<li><a href="riwayat.html">Riwayat Pendidikan</a></li>
-            <li><a href="../styles/homepage.html">Halaman Utama</a></li>
+            <li><a href="../index.html">Halaman Utama</a></li>
   		</ul>
     </nav>
     <!-- Header -->
