--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   	<label for="menu-icon"></label>
   	<nav class="nav"> 		
   		<ul class="pt-5">
-  			<li><a href="Home.html">Home</a></li>
-  			<li><a href="keahlian.html">Keahlian</a></li>
-  			<li><a href="Portofolio.html">Portofolio</a></li>
-  			<li><a href="riwayat.html">Riwayat Pendidikan</a></li>
+  			<li><a href="/styles/Home.html">Home</a></li>
+  			<li><a href="/styles/keahlian.html">Keahlian</a></li>
+  			<li><a href="/styles/Portofolio.html">Portofolio</a></li>
+  			<li><a href="/styles/riwayat.html">Riwayat Pendidikan</a></li>
             <li><a href="index.html">Halaman Utama</a></li>
   		</ul>
     </nav>
