--- a/styles/Portofolio.html
+++ b/styles/Portofolio.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/styles.css" />
-    <link rel="stylesheet" href="../styles/responsive.css" />
-    <link rel="stylesheet" href="../styles/zz.css">
-    <link rel="stylesheet" href="../styles/zZz.css">
+    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="/styles/responsive.css" />
+    <link rel="stylesheet" href="/styles/zz.css">
+    <link rel="stylesheet" href="/styles/zZz.css">
     <title>Afta Herminanta Jati - Web Development</title>
   </head>
   <body>
@@ -14,7 +14,7 @@
   	<label for="menu-icon"></label>
   	<nav class="nav"> 		
   		<ul class="pt-5">
-  			<li><a href="homepage.html">Home</a></li>
+  			<li><a href="home.html">Home</a></li>
   			<li><a href="keahlian.html">Keahlian</a></li>
   			<li><a href="Portofolio.html">Portofolio</a></li>
   			<li><a href="riwayat.html">Riwayat Pendidikan</a></li>
@@ -32,7 +32,7 @@
           <div class="portfolio">
             <div class="portfolio-cover">
               <img
-                src="../Image/GAMBAR3.jpg"
+                src="/Image/GAMBAR3.jpg"
                 alt="Portfolio 1"
               />
             </div>
@@ -69,7 +69,7 @@
           <div class="portfolio">
             <div class="portfolio-cover">
               <img
-                src="../Image/GAMBAR2.jpg"
+                src="/Image/GAMBAR2.jpg"
                 alt="Portfolio 1"
               />
             </div>
@@ -103,7 +103,7 @@
           <div class="portfolio">
             <div class="portfolio-cover">
               <img
-                src="../Image/Noturisgirl.png"
+                src="/Image/Noturisgirl.png"
                 alt="Portfolio 1"
               />
             </div>
