--- a/styles/riwayat.html
+++ b/styles/riwayat.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/styles.css" />
-    <link rel="stylesheet" href="../styles/responsive.css" />
-    <link rel="stylesheet" href="../styles/zz.css">
-    <link rel="stylesheet" href="../styles/zZz.css">
+    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="/styles/responsive.css" />
+    <link rel="stylesheet" href="/styles/zz.css">
+    <link rel="stylesheet" href="/styles/zZz.css">
     <title>Afta Herminanta Jati - Web Development</title>
   </head>
   <body>
@@ -18,7 +18,7 @@
   			<li><a href="keahlian.html">Keahlian</a></li>
   			<li><a href="Portofolio.html">Portofolio</a></li>
   			<li><a href="riwayat.html">Riwayat Pendidikan</a></li>
-        <li><a href="../index.html">Halaman Utama</a></li>
+        <li><a href="/index.html">Halaman Utama</a></li>
   		</ul>
   	</nav>
     <!-- Skills & Education -->
