--- a/styles/Home.html
+++ b/styles/Home.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/styles.css" />
-    <link rel="stylesheet" href="../styles/responsive.css" />
-    <link rel="stylesheet" href="../styles/zz.css">
-    <link rel="stylesheet" href="../styles/zZz.css">
+    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="/styles/responsive.css" />
+    <link rel="stylesheet" href="/styles/zz.css">
+    <link rel="stylesheet" href="/styles/zZz.css">
     <title>Afta Herminanta Jati - Web Development</title>
   </head>
   <body>
@@ -50,12 +50,12 @@
           </div>
 
           <div class="hero-right">
-            <img src="../Image/Zenin.png" alt="Person Standing" />
+            <img src="/Image/Zenin.png" alt="Person Standing" />
           </div>
         </section>
       </div>
     <div class="center">
-    <a href="../styles/Curriculum Vitae.pdf" target="_blank">
+    <a href="/styles/Curriculum Vitae.pdf" target="_blank">
         <button class="draw-border btn">Resume</button>
     </a>
 </header>
