--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/zZz.css">
-    <link rel="stylesheet" href="/styles/zz.css">
+    <link rel="stylesheet" href="styles/zZz.css">
+    <link rel="stylesheet" href="styles/zz.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <title>Portofolio</title>
 </head>
@@ -12,10 +12,10 @@
   	<label for="menu-icon"></label>
   	<nav class="nav"> 		
   		<ul class="pt-5">
-  			<li><a href="/styles/Home.html">Home</a></li>
-  			<li><a href="/styles/keahlian.html">Keahlian</a></li>
-  			<li><a href="/styles/Portofolio.html">Portofolio</a></li>
-  			<li><a href="/styles/riwayat.html">Riwayat Pendidikan</a></li>
+  			<li><a href="styles/Home.html">Home</a></li>
+  			<li><a href="styles/keahlian.html">Keahlian</a></li>
+  			<li><a href="styles/Portofolio.html">Portofolio</a></li>
+  			<li><a href="styles/riwayat.html">Riwayat Pendidikan</a></li>
             <li><a href="index.html">Halaman Utama</a></li>
   		</ul>
     </nav>
@@ -78,7 +78,7 @@ DAN DIPADU OLEH ILMU PENGETAHUAN."
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js" integrity="sha512-AMl4wfwAmDM1lsQvVBBRHYENn1FR8cfOTpt8QVbb/P55mYOdahHD4LmHM1W55pNe3j/3od8ELzPf/8eNkkjISQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/js/animasi.js"></script>
+    <script src="js/animasi.js"></script>
 </body>
 </body>
 </html>
