--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/zZz.css">
-    <link rel="stylesheet" href="styles/zz.css">
+    <link rel="stylesheet" href="/styles/zZz.css">
+    <link rel="stylesheet" href="/styles/zz.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <title>Portofolio</title>
 </head>
