--- a/styles/keahlian.html
+++ b/styles/keahlian.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/responsive.css" />
-    <link rel="stylesheet" href="styles/zz.css">
-    <link rel="stylesheet" href="styles/zZz.css">
+    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="/styles/responsive.css" />
+    <link rel="stylesheet" href="/styles/zz.css">
+    <link rel="stylesheet" href="/styles/zZz.css">
     <title>Afta Herminanta Jati - Web Development</title>
   </head>
   <body>
