--- a/styles/Portofolio.html
+++ b/styles/Portofolio.html
@@ -69,7 +69,7 @@
           <div class="portfolio">
             <div class="portfolio-cover">
               <img
-                src="/Image/GAMBAR2.jpg"
+                src="Image/GAMBAR2.jpg"
                 alt="Portfolio 1"
               />
             </div>
