--- a/Home.html
+++ b/Home.html
@@ -50,12 +50,12 @@
           </div>
 
           <div class="hero-right">
-            <img src="/Image/Zenin.png" alt="Person Standing" />
+            <img src="Image/Zenin.png" alt="Person Standing" />
           </div>
         </section>
       </div>
     <div class="center">
-    <a href="/styles/Curriculum Vitae.pdf" target="_blank">
+    <a href="styles/Curriculum Vitae.pdf" target="_blank">
         <button class="draw-border btn">Resume</button>
     </a>
 </header>
