--- a/Portofolio.html
+++ b/Portofolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="styles/responsive.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <link rel="stylesheet" href="zz.css">
     <link rel="stylesheet" href="zZz.css">
     <title>Afta Herminanta Jati - Web Development</title>
@@ -18,7 +18,7 @@
   			<li><a href="keahlian.html">Keahlian</a></li>
   			<li><a href="Portofolio.html">Portofolio</a></li>
   			<li><a href="riwayat.html">Riwayat Pendidikan</a></li>
-        <li><a href="/index.html">Halaman Utama</a></li>
+        <li><a href="index.html">Halaman Utama</a></li>
   		</ul>
   	</nav>
     <!-- Portfolios -->
@@ -32,7 +32,7 @@
           <div class="portfolio">
             <div class="portfolio-cover">
               <img
-                src="/Image/GAMBAR3.jpg"
+                src="Image/GAMBAR3.jpg"
                 alt="Portfolio 1"
               />
             </div>
@@ -103,7 +103,7 @@
           <div class="portfolio">
             <div class="portfolio-cover">
               <img
-                src="/Image/Noturisgirl.png"
+                src="Image/Noturisgirl.png"
                 alt="Portfolio 1"
               />
             </div>
